Closed
Bug 571211
Opened 16 years ago
Closed 16 years ago
Sun Studio doesn't support 64bit enum for 32bit mode
Categories
(Core :: Layout, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: ginnchen+exoracle, Assigned: ginnchen+exoracle)
References
Details
Attachments
(1 file, 1 obsolete file)
|
12.21 KB,
patch
|
dbaron
:
review+
|
Details | Diff | Splinter Review |
I think 64bit enum is not a C/C++ standard.
We'd better use macro or const.
Comment 2•16 years ago
|
||
The whole point here is to add more bits to this enum, ending up with lots of 64-bit values. So if we can't do that we need to stop using an enum altogether, which is unfortunate.
Comment on attachment 450345 [details] [diff] [review]
patch
What's the actual error message?
The other point here is that all of these constants need to be 64-bit. Moving one of them out of the enum doesn't seem likely to change all the rest.
Attachment #450345 -
Flags: review?(dbaron) → review-
"../../dist/include/nsIFrame.h", line 272: Error: enum is not within the range of a long or unsigned long.
So at least we need to move out values above 0xffffffff, or to be consistent do not use enum for all the values.
This should switch to #define for all the values.
Any chance you could post a revised patch?
Assignee: dbaron → ginn.chen
Attachment #450345 -
Attachment is obsolete: true
Attachment #454023 -
Flags: review?(dbaron)
Attachment #454023 -
Flags: review?(dbaron) → review+
Comment on attachment 454023 [details] [diff] [review]
patch
r=dbaron
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•