Bug 571211 Sun Studio doesn't support 64bit enum for 32bit mode r=dbaron